<resources>
    <string name="app_name">WaterAppFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_delivery">Water delivery</string>
    <string name="water_to_you">Water delivered to you anywhere, anytime at the right price.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">Or</string>
    <string name="create_account">Create account</string>
    <string name="Create_Account">Create Account</string>
    <string name="email_address">Email address</string>
</resources>