<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_app_bg"
    android:padding="30dp"
    tools:context=".Welcome">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/water_delivery"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/water_to_you"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_button"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="#1370FB"
            android:fontFamily="@font/poppins_semibold"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border_button"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textAllCaps="false"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>