<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_app_bg"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/form_bg"
        android:maxWidth="550dp"
        android:padding="30dp"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/water_app_user" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="9"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="10dp"
                        android:elegantTextHeight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/full_name"
                        android:textColor="#000A16"
                        android:textColorHint="#C8C8C8"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/grey_line" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/water_app_password" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="8"
                        android:elegantTextHeight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/password"
                        android:textColor="#000A16"
                        android:textColorHint="#C8C8C8"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/water_app_no_visi" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/grey_line" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#4285F4"
                    android:textSize="14sp"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_medium"/>



            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/primary_button"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>